--- a/base/pom.xml
+++ b/base/pom.xml
@@ -22,6 +22,11 @@
   </properties>
 
   <dependencies>
+      <dependency>
+          <groupId>javax</groupId>
+          <artifactId>javaee-api</artifactId>
+          <version>8.0</version>
+      </dependency>
   </dependencies>
 
   <build>
