--- a/webapp/pom.xml
+++ b/webapp/pom.xml
@@ -37,6 +37,7 @@
     </dependencies>
 
     <build>
+        <finalName>appPartments</finalName>
         <plugins>
             <plugin>
                 <artifactId>maven-surefire-plugin</artifactId>
