--- a/base/src/main/java/com/infoshare/kodziaki/resources/settings.properties
+++ b/base/src/main/java/com/infoshare/kodziaki/resources/settings.properties
@@ -1,1 +1,1 @@
-Upload.Path.Images = /home/dawidmurawski/projektk/jjdd4-kodziaki/Upload
+Upload.Path.CsvReader= /home/dawidmurawski/projektk/jjdd4-kodziaki/Upload
