--- a/webapp/pom.xml
+++ b/webapp/pom.xml
@@ -54,6 +54,17 @@
             <artifactId>freemarker</artifactId>
             <version>2.3.28</version>
         </dependency>
+
+            <dependency>
+                <groupId>org.apache.logging.log4j</groupId>
+                <artifactId>log4j-api</artifactId>
+                <version>2.9.1</version>
+            </dependency>
+            <dependency>
+                <groupId>org.apache.logging.log4j</groupId>
+                <artifactId>log4j-core</artifactId>
+                <version>2.9.1</version>
+            </dependency>
     </dependencies>
 
     <build>
@@ -69,6 +80,7 @@
                         <version>1.2.0</version>
                     </dependency>
                 </dependencies>
+
             </plugin>
 
             <plugin>
