--- a/webapp/pom.xml
+++ b/webapp/pom.xml
@@ -68,6 +68,11 @@
                         <artifactId>junit-platform-surefire-provider</artifactId>
                         <version>1.2.0</version>
                     </dependency>
+                    <dependency>
+                        <groupId>com.google.oauth-client</groupId>
+                        <artifactId>google-oauth-client</artifactId>
+                        <version>1.23.0</version>
+                    </dependency>
                 </dependencies>
             </plugin>
 
