--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 version: "2"
 services:
   db:
-    image: mysql:5.7
+    image: mysql:latest
     environment:
       - MYSQL_ROOT_PASSWORD=pass123
       - MYSQL_DATABASE=ads
