trying resolve problem with loading files

--- a/webapp/src/main/webapp/WEB-INF/web.xml
+++ b/webapp/src/main/webapp/WEB-INF/web.xml
@@ -11,5 +11,8 @@
         <user>root</user>
         <password>pass123</password>
     </data-source>
+    <welcome-file-list>
+        <welcome-file>/welcome</welcome-file>
+    </welcome-file-list>
 
 </web-app>
