add utf8 to docker-compose

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 version: "2"
 services:
   db:
-    image: mysql:latest
+    image: mysql
     environment:
       - MYSQL_ROOT_PASSWORD=pass123
       - MYSQL_DATABASE=ads
@@ -9,6 +9,7 @@ services:
       - MYSQL_PASSWORD=kodziaki
     ports:
       - 4202:3306
+    command: mysqld --character-set-server=utf8 --collation-server=utf8_unicode_ci --init-connect='SET NAMES UTF8;' --innodb-flush-log-at-trx-commit=0
   app:
     build:
       context: ./webapp
