--- a/webapp/Dockerfile
+++ b/webapp/Dockerfile
@@ -6,7 +6,8 @@ COPY target/appPartments.war /opt/jboss/wildfly/standalone/deployments/
 RUN /opt/jboss/wildfly/bin/add-user.sh admin admin --silent
 
 
-COPY src/main/resources/images/ /home/kodziaki/images/
+COPY --chown=jboss:jboss src/main/resources/images/ /home/kodziaki/images/
+CMD ["chmod 777 /home/kodziaki/images/"]
 CMD ["echo Waiting 5 seconds"]
 CMD ["sleep", "5"]
 CMD ["echo Starting Wildfly"]
