--- a/webapp/src/main/webapp/WEB-INF/web.xml
+++ b/webapp/src/main/webapp/WEB-INF/web.xml
@@ -16,7 +16,43 @@
     </welcome-file-list>
 
     <error-page>
+        <error-code>400</error-code>
+        <location>/AppExceptionHandler</location>
+    </error-page>
+    <error-page>
+        <error-code>401</error-code>
+        <location>/AppExceptionHandler</location>
+    </error-page>
+    <error-page>
+        <error-code>403</error-code>
+        <location>/AppExceptionHandler</location>
+    </error-page>
+    <error-page>
         <error-code>404</error-code>
+        <location>/AppExceptionHandler</location>
+    </error-page>
+    <error-page>
+        <error-code>408</error-code>
+        <location>/AppExceptionHandler</location>
+    </error-page>
+    <error-page>
+        <error-code>500</error-code>
+        <location>/AppExceptionHandler</location>
+    </error-page>
+    <error-page>
+        <error-code>502</error-code>
+        <location>/AppExceptionHandler</location>
+    </error-page>
+    <error-page>
+        <error-code>503</error-code>
+        <location>/AppExceptionHandler</location>
+    </error-page>
+    <error-page>
+        <error-code>504</error-code>
+        <location>/AppExceptionHandler</location>
+    </error-page>
+    <error-page>
+        <exception-type>javax.servlet.ServletException</exception-type>
         <location>/AppExceptionHandler</location>
     </error-page>
 
